--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,19 @@
       <version>7.9.0</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Cucumber -->
+    <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-java</artifactId>
+        <version>7.14.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-testng</artifactId>
+        <version>7.14.0</version>
+    </dependency>
+
   </dependencies>
 </project>
